@@ -1,6 +1,10 @@
 ChangeLog for RQL
 =================
 
+--
+    * normalize NOT() to NOT EXISTS() when it makes sense
+
+
 2010-04-20  --  0.26.0
     * setuptools support
 
